# snake

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: cmocka.h  game.h  raylib.h  screen.h  snake.h  state.h
lib/: README.md
src/: game.c  snake.c
test/: main.c
